--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -34,7 +34,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  background: rgba(0, 0, 0, 0.834);
+  background: rgba(255,255,255,1);
   z-index: 1;
 }
 
